force-app/main/default/objects/Portfolio_Report__c/Portfolio_Report__c.object-meta.xml
<CustomObject>
    <description>Object is a launching point for the recalculation of interest accrual for ad-hoc dates.</description>
    <label>Portfolio Report</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Report Instance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>