force-app/main/default/objects/Portfolio_Report__c/fields/Batch_Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Instance_Id__c</fullName>
    <inlineHelpText>Id of batch job running update</inlineHelpText>
    <label>Batch Instance Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>