force-app/main/default/objects/Portfolio_Report__c/fields/Errors__c.field-meta.xml
<CustomField>
    <fullName>Errors__c</fullName>
    <inlineHelpText>Description of any messages or errors which occurred in the batch</inlineHelpText>
    <label>Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>