force-app/main/default/objects/Portfolio_Report__c/fields/From_Date__c.field-meta.xml
<CustomField>
    <fullName>From_Date__c</fullName>
    <inlineHelpText>Starting Date of the Report</inlineHelpText>
    <label>From Date</label>
    <type>Date</type>
</CustomField>