force-app/main/default/objects/Portfolio_Report__c/fields/Since_Inception__c.field-meta.xml
<CustomField>
    <fullName>Since_Inception__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the starting date should be adjusted to the start of each individual loan.</inlineHelpText>
    <label>Since Inception</label>
    <type>Checkbox</type>
</CustomField>