force-app/main/default/objects/Portfolio_Report__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <inlineHelpText>Ending Date of Report</inlineHelpText>
    <label>To Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>