force-app/main/default/objects/Portfolio_Report__c/validationRules/From_Date_less_than_To_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>From_Date_less_than_To_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  NOT(Since_Inception__c) ,
      From_Date__c &gt;  To_Date__c )</errorConditionFormula>
    <errorMessage>Ensure From Date is earlier than To date.</errorMessage>
</ValidationRule>