force-app/main/default/objects/Portfolio_Report__c/validationRules/From_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>From_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(isblank(From_Date__c), NOT( Since_Inception__c )),
    AND(not(isblank(From_Date__c)) ,Since_Inception__c))</errorConditionFormula>
    <errorMessage>Please enter a From Date or mark Since Inception but not both.</errorMessage>
</ValidationRule>