force-app/main/default/objects/Portfolio_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>From_Date__c</columns>
    <columns>Since_Inception__c</columns>
    <columns>Status__c</columns>
    <columns>To_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>